--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,308 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background: #f5f7f9;
   min-height: 100vh;
+}
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f5f7f9;
+}
+.heading {
+  color: #00695c;
+  margin-top: 20px;
+}
+
+.save-btn {
+  background-color: #009688;
+  color: white;
+  border: none;
+  padding: 12px 28px;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.2s;
+  margin: 10px;
+}
+.save-btn:hover {
+  background-color: #00796b;
+}
+
+/* Cards Layout */
+.segments-container {
+  width: 85%;
+  margin: 20px auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 20px;
+}
+
+.segment-card {
+  background-color: #e3f2fd;
+  border: 2px solid #b3e5fc;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+  text-align: left;
+  transition: transform 0.2s;
+}
+.segment-card:hover {
+  transform: translateY(-2px);
+}
+
+.segment-card h3 {
+  color: #00695c;
+  margin-bottom: 10px;
+}
+
+.segment-data {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.data-box {
+  background-color: white;
+  border: 1px solid #90caf9;
+  border-radius: 6px;
+  padding: 8px 12px;
+  display: flex;
+  flex-direction: column;
+  min-width: 130px;
+}
+
+.data-key {
+  font-weight: 600;
+  color: #00695c;
+}
+
+.data-value {
+  color: #333;
+}
+
+.no-data {
+  color: #777;
+}
+
+/* Modal Overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(25, 25, 25, 0.5);
+  display: flex;
+  justify-content: flex-end;
+   overflow-y: auto; 
+}
+
+/* Modal Box */
+.modal {
+  background: white;
+  width: 380px;
+  height: auto;
+  padding: 0px 20px 20px 20px;
+}
+.modal::-webkit-scrollbar {
+  width: 6px;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,0.2);
+  border-radius: 3px;
+}
+.modal-header {
+  background-color: #009688;
   color: white;
+  padding: 10px 15px;
+  border-radius: 6px;
+  font-weight: 600;
+  text-align: left;
+  /* margin-bottom: 15px; */
 }
 
-.App-link {
-  color: #61dafb;
+.modal-content label {
+  font-weight: 500;
+  display: block;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal-content input {
+  width: 100%;
+  margin-top: 6px;
+  margin-bottom: 5px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.desc {
+  text-align: left;
+  font-size: 13px;
+  color: #444;
+}
+
+.schema-box {
+  border: 1px solid #bde0fe;
+  background-color: #e3f2fd;
+  border-radius: 6px;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: left;
+}
+
+.schema-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+  gap: 5px;
+}
+
+.schema-item label {
+  flex: 0.8;
+}
+
+.schema-item input {
+  flex: 1.2;
+  padding: 6px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.remove-btn {
+  background-color: #ff5252;
+  color: white;
+  border: none;
+  padding: 4px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.add-schema-row select {
+  width: 100%;
+  padding: 6px;
+  border-radius: 4px;
+  margin-bottom: 6px;
+}
+
+.add-link {
+  background: none;
+  border: none;
+  color: #009688;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.save-segment-btn {
+  background-color: #009688;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  background-color: #ff5252;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.segment-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.icons {
+  display: flex;
+  gap: 8px;
+}
+
+.edit-icon,
+.delete-icon {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  transition: transform 0.2s ease;
+}
+
+.edit-icon:hover {
+  color: #007bff;
+  transform: scale(1.1);
+}
+
+.delete-icon:hover {
+  color: #ff3b3b;
+  transform: scale(1.1);
+}
+.modalalert-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(25, 25, 25, 0.5);
+  display: flex;
+  justify-content: center; 
+  align-items: center;  
+  z-index: 999;
+}
+
+.alert-modal {
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 20px;
+  height: 100px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.alert-modal p {
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+.alert-actions {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.confirm-btn {
+  background-color: #1976d2;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.ok-btn {
+  background-color: #1976d2;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.cancel-btn {
+  background-color: #e53935;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
 }
